force-app/main/default/objects/Stripe_Configurations__mdt/Stripe_Configurations__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Configuration</label>
    <pluralLabel>Stripe Configurations</pluralLabel>
</CustomObject>