force-app/main/default/objects/Stripe_Configurations__mdt/fields/Cancel_URL__c.field-meta.xml
<CustomField>
    <fullName>Cancel_URL__c</fullName>
    <label>Cancel URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>