force-app/main/default/objects/Stripe_Configurations__mdt/fields/Checkout_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Endpoint__c</fullName>
    <label>Checkout Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>