force-app/main/default/objects/Stripe_Configurations__mdt/fields/Singapore_Currency__c.field-meta.xml
<CustomField>
    <fullName>Singapore_Currency__c</fullName>
    <label>Singapore Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>