force-app/main/default/objects/Stripe_Configurations__mdt/fields/Succes_URL__c.field-meta.xml
<CustomField>
    <fullName>Succes_URL__c</fullName>
    <label>Succes URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>